rename same properties in edit/*, append new css to pages

--- a/edit/title.html
+++ b/edit/title.html
@@ -414,11 +414,11 @@
                         data-testid="myx-container"
                       >
                         <div class="_2m9wl hidden-md" style="">
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -446,11 +446,11 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -479,11 +479,11 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -494,8 +494,8 @@
                                       padding-bottom: 129px;
                                     "
                                   >
-                                    <div class="c14z17by dir dir-ltr">
-                                      <div class="c1yo0219 dir dir-ltr">
+                                    <div class="guest-container__form-wrapper dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
@@ -526,7 +526,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                                                   46/60
                                                 </span>
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="visually-hidden dir dir-ltr"
                                                   aria-atomic="true"
                                                   aria-live="polite"
                                                 >
@@ -556,7 +556,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                           </div>
                           <div class="_1p8e1qw">
                             <div class="_v3p47v">
-                              <div class="c1yo0219 dir dir-ltr">
+                              <div class="flex-before-after dir dir-ltr">
                                 <div
                                   data-plugin-in-point-id="FOOTER"
                                   data-section-id="FOOTER"
