--- a/edit/what.html
+++ b/edit/what.html
@@ -461,7 +461,7 @@
                                       padding-bottom: 129px;
                                     "
                                   >
-                                    <div class="c14z17by dir dir-ltr">
+                                    <div class="guest-container__form-wrapper dir dir-ltr">
                                       <div
                                         class="flex-before-after dir dir-ltr"
                                         style=""
