--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
-    <link rel="stylesheet" href="../dist/edit.css" />
 
     <title>Guest requirements - Airbnb</title>
   </head>
@@ -418,11 +417,11 @@
                         data-testid="myx-container"
                       >
                         <div class="_2m9wl hidden-md" style="">
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -453,11 +452,11 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -489,11 +488,11 @@
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -504,8 +503,8 @@
                                       padding-bottom: 124px;
                                     "
                                   >
-                                    <div class="c14z17by dir dir-ltr">
-                                      <div class="c1yo0219 dir dir-ltr">
+                                    <div class="guest-container__form-wrapper dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
@@ -613,7 +612,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="c1yo0219 dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
@@ -629,14 +628,14 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="underTwo-row-title"
-                                                class="rcem0st uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                               >
                                                 <label
                                                   for="underTwo-row-checkbox"
                                                   class="_13xlah4"
                                                 >
                                                   <div class="_jro6t0">
-                                                    <div class="_gfomxi">
+                                                    <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="underTwo-row-title"
                                                         class="_gw4xx4"
@@ -654,7 +653,7 @@
                                                         <input
                                                           aria-labelledby="underTwo-row-title"
                                                           id="underTwo-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox"
                                                         />
                                                         <span
@@ -670,7 +669,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="c1yo0219 dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
@@ -715,14 +714,14 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="Tag:4804-row-title"
-                                                class="rcem0st uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                               >
                                                 <label
                                                   for="Tag:4804-row-checkbox"
                                                   class="_13xlah4"
                                                 >
                                                   <div class="_jro6t0">
-                                                    <div class="_gfomxi">
+                                                    <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="Tag:4804-row-title"
                                                         class="_gw4xx4"
@@ -749,7 +748,7 @@
                                                           aria-labelledby="Tag:4804-row-title"
                                                           aria-describedby="Tag:4804-row-subtitle"
                                                           id="Tag:4804-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox"
                                                         />
                                                         <span
@@ -766,14 +765,14 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="Tag:4802-row-title"
-                                                class="rcem0st uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                               >
                                                 <label
                                                   for="Tag:4802-row-checkbox"
                                                   class="_13xlah4"
                                                 >
                                                   <div class="_jro6t0">
-                                                    <div class="_gfomxi">
+                                                    <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="Tag:4802-row-title"
                                                         class="_gw4xx4"
@@ -803,7 +802,7 @@
                                                           aria-labelledby="Tag:4802-row-title"
                                                           aria-describedby="Tag:4802-row-subtitle"
                                                           id="Tag:4802-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox"
                                                         />
                                                         <span
@@ -820,14 +819,14 @@
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="Tag:4805-row-title"
-                                                class="rcem0st uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                               >
                                                 <label
                                                   for="Tag:4805-row-checkbox"
                                                   class="_13xlah4"
                                                 >
                                                   <div class="_jro6t0">
-                                                    <div class="_gfomxi">
+                                                    <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="Tag:4805-row-title"
                                                         class="_gw4xx4"
@@ -855,7 +854,7 @@
                                                           aria-labelledby="Tag:4805-row-title"
                                                           aria-describedby="Tag:4805-row-subtitle"
                                                           id="Tag:4805-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox"
                                                         />
                                                         <span
@@ -871,7 +870,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="c1yo0219 dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
@@ -890,7 +889,7 @@
                                                 class="dir dir-ltr"
                                                 id="activity-level-chip-list-DLS-chipGroup-label"
                                               >
-                                                <div class="_1lmb2fq">
+                                                <div class="main-content__schedule-text">
                                                   What activity level should
                                                   people expect?
                                                 </div>
@@ -900,7 +899,7 @@
                                                   experience.
                                                 </div>
                                               </div>
-                                              <div class="_1scyp6q">
+                                              <div class="guest-req__category-option">
                                                 <button
                                                   role="radio"
                                                   title="Light"
@@ -966,7 +965,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="c1yo0219 dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
@@ -985,7 +984,7 @@
                                                 class="dir dir-ltr"
                                                 id="skill-level-chip-list-DLS-chipGroup-label"
                                               >
-                                                <div class="_1lmb2fq">
+                                                <div class="main-content__schedule-text">
                                                   What skill level is required?
                                                 </div>
                                                 <div class="_ebqknn">
@@ -994,7 +993,7 @@
                                                   activity.
                                                 </div>
                                               </div>
-                                              <div class="_1scyp6q">
+                                              <div class="guest-req__category-option">
                                                 <button
                                                   role="radio"
                                                   title="Beginner"
@@ -1060,7 +1059,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="c1yo0219 dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
@@ -1074,7 +1073,7 @@
                                             >
                                               <div class="_1wgf3yo">
                                                 <div
-                                                  class="_18dgbyf"
+                                                  class="page-shell-mobile__mb-16"
                                                   style="
                                                     color: rgb(34, 34, 34);
                                                     font-size: 16px;
@@ -1113,7 +1112,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                   62/850
                                                 </span>
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="visually-hidden dir dir-ltr"
                                                   aria-atomic="true"
                                                   aria-live="polite"
                                                 >
@@ -1124,7 +1123,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="c1yo0219 dir dir-ltr">
+                                      <div class="flex-before-after dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
                                         >
@@ -1158,14 +1157,14 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                 aria-disabled="false"
                                                 role="group"
                                                 aria-labelledby="requireIdVerification-row-title"
-                                                class="rcem0st uyl8mnh dir dir-ltr"
+                                                class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                               >
                                                 <label
                                                   for="requireIdVerification-row-checkbox"
                                                   class="_13xlah4"
                                                 >
                                                   <div class="_jro6t0">
-                                                    <div class="_gfomxi">
+                                                    <div class="explore-filter-menu__list-label">
                                                       <div
                                                         id="requireIdVerification-row-title"
                                                         class="_gw4xx4"
@@ -1193,7 +1192,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                         <input
                                                           aria-labelledby="requireIdVerification-row-title"
                                                           id="requireIdVerification-row-checkbox"
-                                                          class="_1yf4i4f"
+                                                          class="form__check-input"
                                                           type="checkbox"
                                                         />
                                                         <span
@@ -1215,7 +1214,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                               </div>
                             </div>
                           </div>
-                          <div class="c1yo0219 dir dir-ltr">
+                          <div class="flex-before-after dir dir-ltr">
                             <div style="--gp-section-max-width: 1120px">
                               <div
                                 data-plugin-in-point-id="FOOTER"
