--- a/edit/about.html
+++ b/edit/about.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
-    <link rel="stylesheet" href="../dist/edit.css">
     <title>About - Airbnb</title>
   </head>
   <body class="with-new-header touch">
@@ -419,7 +418,7 @@
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -454,7 +453,7 @@
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -465,7 +464,7 @@
                                       padding-bottom: 129px;
                                     "
                                   >
-                                    <div class="c14z17by dir dir-ltr">
+                                    <div class="guest-container__form-wrapper dir dir-ltr">
                                       <div
                                         class="flex-before-after dir dir-ltr"
                                         style=""
@@ -544,11 +543,11 @@
                                               aria-disabled="false"
                                               role="group"
                                               aria-labelledby="ABOUT_YOU_PROFILE_EDIT_LINKS-row-title"
-                                              class="rcem0st u6fux4d dir dir-ltr"
+                                              class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                             >
                                               <div class="_jro6t0">
-                                                <div class="_7ytxmo">
-                                                  <div class="_1tn24b0o">
+                                                <div class="tab__checkbox-mr-16">
+                                                  <div class="place__tips-profile-img">
                                                     <div
                                                       class="_1h6n1zu"
                                                       style="
@@ -560,7 +559,7 @@
                                                       "
                                                     >
                                                       <img
-                                                        class="_9ofhsl"
+                                                        class="img-full"
                                                         aria-hidden="true"
                                                         alt=""
                                                         elementtiming="LCP-target"
@@ -572,7 +571,7 @@
                                                         "
                                                       />
                                                       <div
-                                                        class="_15p4g025"
+                                                        class="background__img-position-center"
                                                         style="
                                                           background-image: url('https://a0.muscache.com/defaults/user_pic-225x225.png?v=3');
                                                           background-size: cover;
@@ -581,7 +580,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_gfomxi">
+                                                <div class="explore-filter-menu__list-label">
                                                   <div
                                                     id="ABOUT_YOU_PROFILE_EDIT_LINKS-row-title"
                                                     class="_gw4xx4"
@@ -635,7 +634,7 @@
                                             <label for="about_host_input">
                                               <div class="_1wgf3yo">
                                                 <div
-                                                  class="_18dgbyf"
+                                                  class="page-shell-mobile__mb-16"
                                                   style="
                                                     color: rgb(34, 34, 34);
                                                     font-size: 16px;
@@ -676,7 +675,7 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                                   162/850
                                                 </span>
                                                 <span
-                                                  class="a8jt5op dir dir-ltr"
+                                                  class="visually-hidden dir dir-ltr"
                                                   aria-atomic="true"
                                                   aria-live="polite"
                                                 >
