--- a/edit/bring.html
+++ b/edit/bring.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
-    <link rel="stylesheet" href="../dist/edit.css">
     <title>What guests should bring</title>
   </head>
   <body class="with-new-header touch">
@@ -421,7 +420,7 @@
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -456,7 +455,7 @@
                             <div style="--gp-section-max-width: 1120px">
                               <div class="_le6wlg">
                                 <div
-                                  class="plmw1e5 mq5rv0q dir dir-ltr"
+                                  class="wrapper-full max__width dir dir-ltr"
                                   style="--maxWidth: 1120px"
                                 >
                                   <div
@@ -467,7 +466,7 @@
                                       padding-bottom: 129px;
                                     "
                                   >
-                                    <div class="c14z17by dir dir-ltr">
+                                    <div class="guest-container__form-wrapper dir dir-ltr">
                                       <div class="flex-before-after dir dir-ltr">
                                         <div
                                           style="--gp-section-max-width: 1120px"
@@ -487,7 +486,7 @@
                                                   theme="[object Object]"
                                                 >
                                                   <div class="_1o7kvyb">
-                                                    <div class="_19uq0tn">
+                                                    <div class="main-content__schedule-text">
                                                       Yes
                                                     </div>
                                                   </div>
@@ -503,7 +502,7 @@
                                                   theme="[object Object]"
                                                 >
                                                   <div class="_1o7kvyb">
-                                                    <div class="_19uq0tn">
+                                                    <div class="main-content__schedule-text">
                                                       No, guests just need to
                                                       show up
                                                     </div>
@@ -567,7 +566,7 @@
                                                       </div>
                                                     </div>
                                                     <div dir="ltr">
-                                                      <div class="_fywymp7">
+                                                      <div class="spinner-chart__input-currency">
                                                         <input
                                                           data-testid="packing-item-0"
                                                           class="_yrzsibu"
@@ -628,7 +627,7 @@
                                                       </div>
                                                     </div>
                                                     <div dir="ltr">
-                                                      <div class="_fywymp7">
+                                                      <div class="spinner-chart__input-currency">
                                                         <input
                                                           data-testid="packing-item-1"
                                                           class="_yrzsibu"
@@ -689,7 +688,7 @@
                                                       </div>
                                                     </div>
                                                     <div dir="ltr">
-                                                      <div class="_fywymp7">
+                                                      <div class="spinner-chart__input-currency">
                                                         <input
                                                           data-testid="packing-item-2"
                                                           class="_yrzsibu"
@@ -750,7 +749,7 @@
                                                       </div>
                                                     </div>
                                                     <div dir="ltr">
-                                                      <div class="_fywymp7">
+                                                      <div class="spinner-chart__input-currency">
                                                         <input
                                                           data-testid="packing-item-3"
                                                           class="_yrzsibu"
@@ -811,7 +810,7 @@
                                                       </div>
                                                     </div>
                                                     <div dir="ltr">
-                                                      <div class="_fywymp7">
+                                                      <div class="spinner-chart__input-currency">
                                                         <input
                                                           data-testid="packing-item-4"
                                                           class="_yrzsibu"
@@ -872,7 +871,7 @@
                                                       </div>
                                                     </div>
                                                     <div dir="ltr">
-                                                      <div class="_fywymp7">
+                                                      <div class="spinner-chart__input-currency">
                                                         <input
                                                           data-testid="packing-item-5"
                                                           class="_yrzsibu"
