renaming aminities page - globally changes

--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -15,12 +15,12 @@
       <div dir="ltr">
         <div data-theme="" class="app-theme">
           <div>
-            <div class="_evqnuxp"></div>
-            <main class="_fmgjts">
+            <div class="become-a-host__container"></div>
+            <main class="become-a-host__main">
               <div class="_1b9ixxkj" aria-hidden="false">
                 <div class="_oy5ese hidden-md">
                   <div class="_1l7bhkmt">
-                    <div class="_fwc96">
+                    <div class="become-a-host__header-menu">
                       <div class="page-shell-mobile__container">
                         <div>
                           <button
@@ -54,8 +54,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="_kp9zti">
-                  <a aria-label="Airbnb homepage" href="/" class="_1y540ni"
+                <div class="become-a-host__logo-wrapper">
+                  <a aria-label="Airbnb homepage" href="/" class="become-a-host__logo-link"
                     ><span class="relative"
                       ><svg
                         viewBox="0 0 32 32"
@@ -165,9 +165,9 @@
                           <div class="_e090fc">
                             <span
                               ><button class="_1l7cdtx" type="button">
-                                <div class="_66qnx8">
+                                <div class="become-a-host__help-content">
                                   <div>Watch full video</div>
-                                  <span aria-hidden="true" class="_dw82l6q"
+                                  <span aria-hidden="true" class="become-a-host__m-help-span"
                                     >Watch full video</span
                                   >
                                 </div>
@@ -224,9 +224,9 @@
                       <div class="_e090fc">
                         <span
                           ><button class="_1l7cdtx" type="button">
-                            <div class="_66qnx8">
+                            <div class="become-a-host__help-content">
                               <div>Watch full video</div>
-                              <span aria-hidden="true" class="_dw82l6q"
+                              <span aria-hidden="true" class="become-a-host__m-help-span"
                                 >Watch full video</span
                               >
                             </div>
@@ -278,12 +278,12 @@
                   </div>
                 </div>
               </div>
-              <div class="_gqn5ll" aria-hidden="false">
+              <div class="become-a-host__header" aria-hidden="false">
                 <div class="_1l7bhkmt">
-                  <div class="_fwc96">
+                  <div class="become-a-host__header-menu">
                     <div class="tab__content-visibility">
                       <button class="_qa0cc5" type="button">
-                        <div class="_66qnx8">
+                        <div class="become-a-host__help-content">
                           <div>Exit</div>
                           <span aria-hidden="true" class="_1g2aycaq">Exit</span>
                         </div>
@@ -294,9 +294,9 @@
               </div>
               <div class="_1vsbg6fi">
                 <div class="_14lxf1rd">
-                  <div class="_112azfv">
-                    <div class="_tdjw9nc" style="transition: opacity 0.6s">
-                      <div class="_10mqyec">
+                  <div class="become-a-host__right-content">
+                    <div class="become-a-host__right-content-wrap" style="transition: opacity 0.6s">
+                      <div class="become-a-host__right-wrap">
                         <span style="font-size: 0"></span>
                         <div class="_118xr10" id="FMP-target">
                           <div class="_e5xjym4">
@@ -315,10 +315,10 @@
                     </div>
                   </div>
                 </div>
-                <div class="_1px78l2">
+                <div class="become-a-host__footer">
                   <div class="_1dufybwf">
                     <div class="_1pblb3vf">
-                      <div class="_dt53i0">
+                      <div class="become-a-host__footer-next">
                         <a
                           href="property-type-group.html"
                           class="_cd8zo4d w-full"
