--- a/insights.html
+++ b/insights.html
@@ -241,7 +241,7 @@
                                       >
                                         Last 30 days<span
                                           aria-hidden="true"
-                                          class="_dw82l6q"
+                                          class="become-a-host__m-help-span"
                                           >Last 30 days</span
                                         >
                                       </button>
