--- a/transaction_history.html
+++ b/transaction_history.html
@@ -205,7 +205,7 @@
                                                 type="button"
                                               >
                                                 <div class="_g14cw6">
-                                                  <div class="_66qnx8">
+                                                  <div class="become-a-host__help-content">
                                                     <div>Menu</div>
                                                   </div>
                                                   <div class="_1bivq6y">
@@ -237,7 +237,7 @@
                                                   aria-hidden="true"
                                                   class="_1ykbee0q"
                                                   ><div class="_g14cw6">
-                                                    <div class="_66qnx8">
+                                                    <div class="become-a-host__help-content">
                                                       <div>Menu</div>
                                                     </div>
                                                     <div class="_1bivq6y">
