--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -39,10 +39,10 @@
         <div data-theme="" class="app-theme">
           <div>
             <div class="_ntec918"></div>
-            <main class="_fmgjts">
+            <main class="become-a-host__main">
               <div class="_1b9ixxkj" aria-hidden="false">
-                <div class="_kp9zti">
-                  <a aria-label="Airbnb homepage" href="/" class="_1y540ni"
+                <div class="become-a-host__logo-wrapper">
+                  <a aria-label="Airbnb homepage" href="/" class="become-a-host__logo-link"
                     ><span class="relative"
                       ><svg
                         viewBox="0 0 32 32"
@@ -152,9 +152,9 @@
                           <div class="_e090fc">
                             <span
                               ><button class="_1l7cdtx" type="button">
-                                <div class="_66qnx8">
+                                <div class="become-a-host__help-content">
                                   <div>Watch full video</div>
-                                  <span aria-hidden="true" class="_dw82l6q"
+                                  <span aria-hidden="true" class="become-a-host__m-help-span"
                                     >Watch full video</span
                                   >
                                 </div>
@@ -214,9 +214,9 @@
                       <div class="_e090fc">
                         <span
                           ><button class="_1l7cdtx" type="button">
-                            <div class="_66qnx8">
+                            <div class="become-a-host__help-content">
                               <div>Watch full video</div>
-                              <span aria-hidden="true" class="_dw82l6q"
+                              <span aria-hidden="true" class="become-a-host__m-help-span"
                                 >Watch full video</span
                               >
                             </div>
@@ -271,15 +271,15 @@
                   </div>
                 </div>
               </div>
-              <div class="_gqn5ll" aria-hidden="false">
-                <div class="_1j8ocyu">
-                  <div class="_fwc96">
+              <div class="become-a-host__header" aria-hidden="false">
+                <div class="become-a-host__header-wrapper">
+                  <div class="become-a-host__header-menu">
                     <div class="page-shell-mobile__container hidden-md">
-                      <div class="_muecdg">
+                      <div class="become-a-host__close-wrapper">
                         <button
                           aria-label="Close"
                           type="button"
-                          class="_1pdnceg"
+                          class="become-a-host__close-btn"
                         >
                           <span class="relative-opacity">
                             <svg
@@ -306,43 +306,43 @@
                       </div>
                     </div>
                   </div>
-                  <div class="_fwc96">
+                  <div class="become-a-host__header-menu">
                     <div class="flex-items-center">
-                      <div class="_1w3zdzk">
+                      <div class="become-a-host__profile-wrapper">
                         <button
-                          class="_o0rqv1"
+                          class="become-a-host__profile-btn"
                           type="button"
                           aria-expanded="false"
                           aria-label="Ask a Superhost"
                         >
-                          <div class="_1b5esrr" aria-hidden="true">
+                          <div class="become-a-host__profile-content" aria-hidden="true">
                             <img
-                              class="_1bv1agf"
+                              class="become-a-host__profile-img"
                               src="https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium"
                               alt=""
                             />
                           </div>
                         </button>
                       </div>
-                      <div class="_15q0efe">
+                      <div class="become-a-host__m-help-wrapper">
                         <button
                           aria-label="Help"
                           class="_1mrn1d1"
                           type="button"
                         >
-                          <div class="_tujr53">
+                          <div class="become-a-host__m-help-content">
                             <div>Help</div>
-                            <span aria-hidden="true" class="_dw82l6q"
+                            <span aria-hidden="true" class="become-a-host__m-help-span"
                               >Help</span
                             >
                           </div>
                         </button>
                       </div>
-                      <div class="_hzh8ju">
-                        <button class="_109k4q4" type="button">
-                          <div class="_66qnx8">
+                      <div class="become-a-host__help-wrapper">
+                        <button class="become-a-host__help-btn" type="button">
+                          <div class="become-a-host__help-content">
                             <div>Help</div>
-                            <span aria-hidden="true" class="_lszbo6q"
+                            <span aria-hidden="true" class="become-a-host__help-span"
                               >Help</span
                             >
                           </div>
@@ -350,12 +350,12 @@
                       </div>
                     </div>
                   </div>
-                  <div class="_fwc96">
+                  <div class="become-a-host__header-menu">
                     <div class="tab__content-visibility">
-                      <button class="_109k4q4" type="button">
-                        <div class="_66qnx8">
+                      <button class="become-a-host__help-btn" type="button">
+                        <div class="become-a-host__help-content">
                           <div>Save and exit</div>
-                          <span aria-hidden="true" class="_lszbo6q"
+                          <span aria-hidden="true" class="become-a-host__help-span"
                             >Save and exit</span
                           >
                         </div>
@@ -364,11 +364,11 @@
                   </div>
                 </div>
               </div>
-              <div class="_71i6e4">
-                <div class="_1vujop1d">
-                  <div class="_112azfv">
-                    <div class="_tdjw9nc" style="transition: opacity 0.6s">
-                      <div class="_10mqyec">
+              <div class="become-a-host__right-container">
+                <div class="become-a-host__right-wrapper">
+                  <div class="become-a-host__right-content">
+                    <div class="become-a-host__right-content-wrap" style="transition: opacity 0.6s">
+                      <div class="become-a-host__right-wrap">
                         <span style="font-size: 0"></span>
                         <div class="_118xr10" id="FMP-target">
                           <div class="_1xtlf7t">
@@ -452,15 +452,15 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                     </div>
                   </div>
                 </div>
-                <div class="_1px78l2">
-                  <div class="_11go4zx">
+                <div class="become-a-host__footer">
+                  <div class="become-a-host__footer-wrapper">
                     <div class="flex-items-center">
                       <span class="text-highlight dir dir-ltr"
                         >Your progress: step 8 out of 10.</span
                       >
-                      <div class="_9kv7q8">
+                      <div class="become-a-host__footer-progress">
                         <div
-                          class="_n38lrm"
+                          class="become-a-host__footer-progress-bar"
                           style="
                             transition: transform 0.6s;
                             transform: translateX(73%);
@@ -468,8 +468,8 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                         ></div>
                       </div>
                     </div>
-                    <div class="_7lnmui">
-                      <div class="_r5r508">
+                    <div class="become-a-host__footer-action">
+                      <div class="become-a-host__footer-back">
                         <a
                           href="title.html"
                           aria-label="Back to previous step"
@@ -477,7 +477,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                           >Back
                         </a>
                       </div>
-                      <div class="_dt53i0">
+                      <div class="become-a-host__footer-next">
                         <a
                           href="price.html"
                           class="btn-dark"
