--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -38,11 +38,11 @@
       <div dir="ltr">
         <div data-theme="" class="app-theme">
           <div>
-            <div class="_evqnuxp"></div>
-            <main class="_fmgjts">
-              <div class="_15c6744c" aria-hidden="false">
-                <div class="_kp9zti">
-                  <a aria-label="Airbnb homepage" href="/" class="_1y540ni"
+            <div class="become-a-host__container"></div>
+            <main class="become-a-host__main">
+              <div class="become-a-host__left-container" aria-hidden="false">
+                <div class="become-a-host__logo-wrapper">
+                  <a aria-label="Airbnb homepage" href="/" class="become-a-host__logo-link"
                     ><span class="relative"
                       ><svg
                         viewBox="0 0 32 32"
@@ -62,21 +62,21 @@
                         ></path></svg></span
                   ></a>
                 </div>
-                <div class="_1jp5a5ys">
-                  <h1 class="_hvpbea" tabindex="-1">
+                <div class="become-a-host__text-wrapper">
+                  <h1 class="become-a-host__text-h1" tabindex="-1">
                     Where's your place located?
                   </h1>
                 </div>
               </div>
               <div class="_19co9bom" aria-hidden="false">
                 <div class="_l6v72tr">
-                  <div class="_fwc96">
+                  <div class="become-a-host__header-menu">
                     <div class="page-shell-mobile__container hidden-md">
-                      <div class="_muecdg">
+                      <div class="become-a-host__close-wrapper">
                         <button
                           aria-label="Close"
                           type="button"
-                          class="_1pdnceg"
+                          class="become-a-host__close-btn"
                         >
                           <span class="_q6zl6">
                             <svg
@@ -103,41 +103,41 @@
                       </div>
                     </div>
                   </div>
-                  <div class="_fwc96">
+                  <div class="become-a-host__header-menu">
                     <div class="flex-items-center">
-                      <div class="_1w3zdzk">
+                      <div class="become-a-host__profile-wrapper">
                         <button
                           class="_wnevu0"
                           type="button"
                           aria-expanded="false"
                           aria-label="Ask a Superhost"
                         >
-                          <div class="_1b5esrr" aria-hidden="true">
+                          <div class="become-a-host__profile-content" aria-hidden="true">
                             <img
-                              class="_1bv1agf"
+                              class="become-a-host__profile-img"
                               src="https://a0.muscache.com/im/pictures/user/5438063d-f035-43c0-b9da-59eb0ff20b8f.jpg?aki_policy=profile_x_medium"
                               alt=""
                             />
                           </div>
                         </button>
                       </div>
-                      <div class="_15q0efe">
+                      <div class="become-a-host__m-help-wrapper">
                         <button
                           aria-label="Help"
-                          class="_1h4qizn"
+                          class="become-a-host__m-help-btn"
                           type="button"
                         >
-                          <div class="_tujr53">
+                          <div class="become-a-host__m-help-content">
                             <div>Help</div>
-                            <span aria-hidden="true" class="_dw82l6q"
+                            <span aria-hidden="true" class="become-a-host__m-help-span"
                               >Help</span
                             >
                           </div>
                         </button>
                       </div>
-                      <div class="_hzh8ju">
+                      <div class="become-a-host__help-wrapper">
                         <button class="_qa0cc5" type="button">
-                          <div class="_66qnx8">
+                          <div class="become-a-host__help-content">
                             <div>Help</div>
                             <span aria-hidden="true" class="_1g2aycaq"
                               >Help</span
@@ -147,10 +147,10 @@
                       </div>
                     </div>
                   </div>
-                  <div class="_fwc96">
+                  <div class="become-a-host__header-menu">
                     <div class="tab__content-visibility">
                       <button class="_qa0cc5" type="button">
-                        <div class="_66qnx8">
+                        <div class="become-a-host__help-content">
                           <div>Save and exit</div>
                           <span aria-hidden="true" class="_1g2aycaq"
                             >Save and exit</span
@@ -161,11 +161,11 @@
                   </div>
                 </div>
               </div>
-              <div class="_71i6e4">
+              <div class="become-a-host__right-container">
                 <div class="_1dhc1ohq">
-                  <div class="_112azfv">
-                    <div class="_tdjw9nc" style="transition: opacity 0.6s">
-                      <div class="_10mqyec">
+                  <div class="become-a-host__right-content">
+                    <div class="become-a-host__right-content-wrap" style="transition: opacity 0.6s">
+                      <div class="become-a-host__right-wrap">
                         <span style="font-size: 0"></span>
                         <div class="_184tk81y" id="FMP-target">
                           <div class="_8ojzb1">
@@ -301,15 +301,15 @@
                     </div>
                   </div>
                 </div>
-                <div class="_1px78l2">
-                  <div class="_11go4zx">
+                <div class="become-a-host__footer">
+                  <div class="become-a-host__footer-wrapper">
                     <div class="flex-items-center">
                       <span class="text-highlight dir dir-ltr"
                         >Your progress: step 3 out of 10.</span
                       >
-                      <div class="_9kv7q8">
+                      <div class="become-a-host__footer-progress">
                         <div
-                          class="_n38lrm"
+                          class="become-a-host__footer-progress-bar"
                           style="
                             transition: transform 0.6s;
                             transform: translateX(27%);
@@ -317,8 +317,8 @@
                         ></div>
                       </div>
                     </div>
-                    <div class="_7lnmui">
-                      <div class="_r5r508">
+                    <div class="become-a-host__footer-action">
+                      <div class="become-a-host__footer-back">
                         <a
                           href="privacy-type.html"
                           aria-label="Back to previous step"
@@ -326,7 +326,7 @@
                           >Back
                         </a>
                       </div>
-                      <div class="_dt53i0">
+                      <div class="become-a-host__footer-next">
                         <a
                           href="floor-plan.html"
                           class="btn-dark"
