renaming description page - globally changes

--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -17,7 +17,7 @@
           <div>
             <div class="become-a-host__container"></div>
             <main class="become-a-host__main">
-              <div class="_1b9ixxkj" aria-hidden="false">
+              <div class="become-a-host__left-vid-container" aria-hidden="false">
                 <div class="_oy5ese hidden-md">
                   <div class="_1l7bhkmt">
                     <div class="become-a-host__header-menu">
@@ -75,8 +75,8 @@
                         ></path></svg></span
                   ></a>
                 </div>
-                <div class="_1n1ozna" data-testid="lys-video-context-panel">
-                  <div class="_flkdv3">
+                <div class="become-a-host__video-wrapper" data-testid="lys-video-context-panel">
+                  <div class="become-a-host__video-content">
                     <video
                       class="video-display"
                       style="object-fit: cover; object-position: 0 25%"
@@ -96,7 +96,7 @@
                         type="video/mp4"
                       />
                     </video>
-                    <div class="_15xb09ct" style="transition-duration: 800ms">
+                    <div class="become-a-host__video-thumbnail" style="transition-duration: 800ms">
                       <div
                         class="img-middle"
                         style="
@@ -162,16 +162,16 @@
                     <div class="_cu2h1k4">
                       <div>
                         <div class="flex-column">
-                          <div class="_e090fc">
+                          <div class="become-a-host__video-action-content">
                             <span
-                              ><button class="_1l7cdtx" type="button">
+                              ><button class="become-a-host__video-watch-full" type="button">
                                 <div class="become-a-host__help-content">
                                   <div>Watch full video</div>
                                   <span aria-hidden="true" class="become-a-host__m-help-span"
                                     >Watch full video</span
                                   >
                                 </div>
-                                <div class="_yjuzyy">
+                                <div class="become-a-host__video-watch-logo">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -193,7 +193,7 @@
                             ><button
                               aria-label="Play"
                               type="button"
-                              class="_yh5j8f"
+                              class="become-a-host__video-play"
                             >
                               <span class="relative"
                                 ><svg
@@ -221,16 +221,16 @@
                   </div>
                   <div aria-hidden="true" class="_kr8u8xr">
                     <div class="flex-column">
-                      <div class="_e090fc">
+                      <div class="become-a-host__video-action-content">
                         <span
-                          ><button class="_1l7cdtx" type="button">
+                          ><button class="become-a-host__video-watch-full" type="button">
                             <div class="become-a-host__help-content">
                               <div>Watch full video</div>
                               <span aria-hidden="true" class="become-a-host__m-help-span"
                                 >Watch full video</span
                               >
                             </div>
-                            <div class="_yjuzyy">
+                            <div class="become-a-host__video-watch-logo">
                               <svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -252,7 +252,7 @@
                         ><button
                           aria-label="Play"
                           type="button"
-                          class="_yh5j8f"
+                          class="become-a-host__video-play"
                         >
                           <span class="relative"
                             ><svg
@@ -298,7 +298,7 @@
                     <div class="become-a-host__right-content-wrap" style="transition: opacity 0.6s">
                       <div class="become-a-host__right-wrap">
                         <span style="font-size: 0"></span>
-                        <div class="_118xr10" id="FMP-target">
+                        <div class="become-a-host__right-form" id="FMP-target">
                           <div class="_e5xjym4">
                             <h1 class="_1eg7jkhx">
                               Become a Host in 10 easy steps
