--- a/submission/title.html
+++ b/submission/title.html
@@ -1072,7 +1072,7 @@
                                 id="title-textarea-label"
                                 >Let’s give your experience a name</span
                               >
-                              <div class="_1l56up5">
+                              <div class="become-a-host__form-input-wrapper">
                                 <div dir="ltr">
                                   <textarea
                                     maxlength="60"
@@ -1090,7 +1090,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                                 </div>
                               </div>
                               <div class="_1b3feto">
-                                <div class="_1wmtabt">
+                                <div class="become-a-host__text-count-content">
                                   <span aria-hidden="true">48/60</span
                                   ><span
                                     class="text-highlight dir dir-ltr"
