--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -35,9 +35,9 @@
       <div dir="ltr">
         <div data-theme="" class="app-theme">
           <div>
-            <div class="_ntec918"></div>
+            <div class="become-a-host__container-no-repeat"></div>
             <main class="become-a-host__main">
-              <div class="_1b9ixxkj" aria-hidden="false">
+              <div class="become-a-host__left-vid-container" aria-hidden="false">
                 <div class="become-a-host__logo-wrapper">
                   <a aria-label="Airbnb homepage" href="/" class="become-a-host__logo-link"
                     ><span class="relative"
@@ -59,8 +59,8 @@
                         ></path></svg></span
                   ></a>
                 </div>
-                <div class="_1n1ozna" data-testid="lys-video-context-panel">
-                  <div class="_flkdv3">
+                <div class="become-a-host__video-wrapper" data-testid="lys-video-context-panel">
+                  <div class="become-a-host__video-content">
                     <video
                       class="video-display"
                       style="object-fit: cover; object-position: 0 25%"
@@ -80,7 +80,7 @@
                         type="video/mp4"
                       />
                     </video>
-                    <div class="_15xb09ct" style="transition-duration: 800ms">
+                    <div class="become-a-host__video-thumbnail" style="transition-duration: 800ms">
                       <div
                         class="img-middle"
                         style="
@@ -142,20 +142,20 @@
                         ></div>
                       </div>
                     </div>
-                    <div class="_18kl98vr"></div>
-                    <div class="_xyhqsk">
+                    <div class="become-a-host__video-spacer"></div>
+                    <div class="become-a-host__video-action-wrapper">
                       <div>
                         <div class="flex-column">
-                          <div class="_e090fc">
+                          <div class="become-a-host__video-action-content">
                             <span
-                              ><button class="_1l7cdtx" type="button">
+                              ><button class="become-a-host__video-watch-full" type="button">
                                 <div class="become-a-host__help-content">
                                   <div>Watch full video</div>
                                   <span aria-hidden="true" class="become-a-host__m-help-span"
                                     >Watch full video</span
                                   >
                                 </div>
-                                <div class="_yjuzyy">
+                                <div class="become-a-host__video-watch-logo">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -177,7 +177,7 @@
                             ><button
                               aria-label="Pause"
                               type="button"
-                              class="_yh5j8f"
+                              class="become-a-host__video-play"
                             >
                               <span class="relative"
                                 ><svg
@@ -199,25 +199,25 @@
                               ></span>
                             </button>
                           </div>
-                          <h1 class="_uyq5bx">
+                          <h1 class="become-a-host__video-text-h1">
                             Now for the fun part—set your price
                           </h1>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div aria-hidden="true" class="_h3byb0o">
+                  <div aria-hidden="true" class="become-a-host__m-video-action-wrapper">
                     <div class="flex-column">
-                      <div class="_e090fc">
+                      <div class="become-a-host__video-action-content">
                         <span
-                          ><button class="_1l7cdtx" type="button">
+                          ><button class="become-a-host__video-watch-full" type="button">
                             <div class="become-a-host__help-content">
                               <div>Watch full video</div>
                               <span aria-hidden="true" class="become-a-host__m-help-span"
                                 >Watch full video</span
                               >
                             </div>
-                            <div class="_yjuzyy">
+                            <div class="become-a-host__video-watch-logo">
                               <svg
                                 viewBox="0 0 32 32"
                                 xmlns="http://www.w3.org/2000/svg"
@@ -239,7 +239,7 @@
                         ><button
                           aria-label="Play"
                           type="button"
-                          class="_yh5j8f"
+                          class="become-a-host__video-play"
                         >
                           <span class="relative"
                             ><svg
@@ -261,7 +261,7 @@
                           ></span>
                         </button>
                       </div>
-                      <h1 class="_uyq5bx" tabindex="-1">
+                      <h1 class="become-a-host__video-text-h1" tabindex="-1">
                         Now for the fun part—set your price
                       </h1>
                     </div>
